@@ -14,6 +14,7 @@ export(GeomDensityTern)
 export(GeomErrorbarl)
 export(GeomErrorbarr)
 export(GeomErrorbart)
+export(GeomHexTern)
 export(GeomInterpolateTern)
 export(GeomLabelViewport)
 export(GeomLisoprop)
@@ -42,6 +43,7 @@ export(Rlab)
 export(Rline)
 export(StatConfidenceTern)
 export(StatDensityTern)
+export(StatHexTern)
 export(StatInterpolateTern)
 export(StatMeanEllipse)
 export(StatSmoothTern)
@@ -87,6 +89,7 @@ export(geom_density_tern)
 export(geom_errorbarL)
 export(geom_errorbarR)
 export(geom_errorbarT)
+export(geom_hex_tern)
 export(geom_interpolate_tern)
 export(geom_label_viewport)
 export(geom_mask)
@@ -126,6 +129,7 @@ export(scale_T_continuous)
 export(stat_confidence)
 export(stat_confidence_tern)
 export(stat_density_tern)
+export(stat_hex_tern)
 export(stat_interpolate_tern)
 export(stat_mean_ellipse)
 export(stat_smooth_tern)
